sink to gs in cluster

--- a/build.gradle
+++ b/build.gradle
@@ -176,6 +176,7 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.debug = true
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
